added clearfix to the core css

--- a/public/stylesheets/core/core.css
+++ b/public/stylesheets/core/core.css
@@ -24,3 +24,11 @@ select,input,button,textarea,button{font:99% arial,helvetica,clean,sans-serif;}
 table{font-size:inherit;font:100%;}
 pre,code,kbd,samp,tt{font-family:monospace;*font-size:108%;line-height:100%;}
 body{text-align:center;}
+/*************************/
+/* Nasty clearfix hacks */
+.clearfix, p.gallery{display:inline-block;}
+/* Hide from IE Mac \*/
+.clearfix, p.gallery{display:block;}
+/* End hide from IE Mac */
+.clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
+/*************************/
