--- a/app/view/layouts/application.html
+++ b/app/view/layouts/application.html
@@ -2,9 +2,7 @@
 <html lang="en"><head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <?=css_bundle("core")?>
-  <script src="http://www.google.com/jsapi"></script>
-  <script>google.load("jquery", "1");</script>
-  <?=js_bundle("core")?>
+  
   <title>Welcome to PHP-WAX</title>
   <style type="text/css">
     html * { padding:0; margin:0; } body * { padding:10px 20px; } body * * { padding:0; }
@@ -21,5 +19,21 @@
 <?=$content_for_layout?>
 
 
+<script src="http://www.google.com/jsapi"></script>
+<script>google.load("jquery", "1");</script>
+<?=js_bundle("core")?>
+<script type="text/javascript">
+var tracker_id = "<?=Config::get('analytics/tracker_id')?>";
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', tracker_id]);
+_gaq.push(['_trackPageview']);
+
+(function() {
+    var ga = document.createElement('script');     ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:'   == document.location.protocol ? 'https://ssl'   : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    
+})();
+</script>
 </body>
 </html>
